--- a/web/index.html
+++ b/web/index.html
@@ -1,9 +1,4 @@
-<!--A Design by W3layouts
-Author: W3layout
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
+
 <!DOCTYPE HTML>
 <html>
 <head>
@@ -65,10 +60,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					 <div class="menu">
 						  <a class="toggleMenu" href="#"><img src="images/nav.png" alt="" /></a>
 						    <ul class="nav" id="nav">
-						    	<li><a href="shop.html">Shop</a></li>
-						    	<li><a href="team.html">Team</a></li>
-						    	<li><a href="experiance.html">Events</a></li>
-						    	<li><a href="experiance.html">Experiance</a></li>
+						    	<li><a href="#">Sports</a></li>
+						    	<li><a href="team.html">Teams</a></li>
+						    	<li><a href="events.html">Events</a></li>
+						    	<li><a href="experiance.html">Extreme</a></li>
 						    	<li><a href="shop.html">Company</a></li>
 								<li><a href="contact.html">Contact</a></li>								
 								<div class="clear"></div>
@@ -140,6 +135,17 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 </div>
                <!-- /Texts container -->
             </div>
+            <!-- /Duplicate to create more slides -->
+            <div class="slide">
+               <img src="images/slider2.jpg" class="img-responsive" alt=""/>
+                <div class="slide_content">
+                    <div class="slide_content_wrap">
+                        <h1 class="title">Run Over<br>Everything</h1>
+                       	<div class="button"><a href="#">See Details</a></div>
+                    </div>
+                </div>
+            </div>
+            <!--/slide -->
             <!-- /Duplicate to create more slides -->
             <div class="slide">
                <img src="images/slider2.jpg" class="img-responsive" alt=""/>
