--- a/web/index.html
+++ b/web/index.html
@@ -2,9 +2,11 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Free Snow Bootstrap Website Template | Home :: w3layouts</title>
+<title>Extreme to the edge</title>
 <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
 <link href="css/style.css" rel='stylesheet' type='text/css' />
+<link href="css/stuffs.css" rel='stylesheet' type='text/css' />
+
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
@@ -16,6 +18,9 @@
 <script src="js/jquery-ui.min.js"></script>
 <script src="js/fwslider.js"></script>
 <!--end slider -->
+<!--asd-->
+<script src="js/myjs.js"></script>
+
 <script type="text/javascript">
         $(document).ready(function() {
             $(".dropdown img.flag").addClass("flagvisibility");
@@ -60,18 +65,29 @@
 					 <div class="menu">
 						  <a class="toggleMenu" href="#"><img src="images/nav.png" alt="" /></a>
 						    <ul class="nav" id="nav">
-						    	<li><a href="#">Sports</a></li>
+						    	<li><a href="#" class="toggleMenuz">Sports</a></li>
 						    	<li><a href="team.html">Teams</a></li>
 						    	<li><a href="events.html">Events</a></li>
 						    	<li><a href="experiance.html">Extreme</a></li>
 						    	<li><a href="shop.html">Company</a></li>
-								<li><a href="contact.html">Contact</a></li>								
+								<li><a href="contact.html">Contact</a></li>						
 								<div class="clear"></div>
 							</ul>
 							<script type="text/javascript" src="js/responsive-nav.js"></script>
-				    </div>							
+				    </div>
+				    <div class="row"> 
+	    	    		<div class="menu">
+	    	    			
+  							<ul class="nava small" id="nava" >
+    							<li ><a href="#">BMX MODERFOCKER<img src="images/bmx.png"></a></li>
+    							<li ><a href="#">BMX MODERFOCKER<img src="images/bmx.png"></a></li>
+  							</ul>
+  							<script type="text/javascript" src="js/myjs2.js"></script>
+  						</div>
+					</div>							
 	    		    <div class="clear"></div>
 	    	    </div>
+	    	    
 	            <div class="header_right">
 	    		  <!-- start search-->
 				      <div class="search-box">
