--- a/web/index.html
+++ b/web/index.html
@@ -68,7 +68,7 @@
 						    	<li><a href="#" class="toggleMenuz">Sports</a></li>
 						    	<li><a href="team.html">Teams</a></li>
 						    	<li><a href="events.html">Events</a></li>
-						    	<li><a href="experiance.html">Extreme</a></li>
+						    	<li><a href="extreme.html">Extreme</a></li>
 						    	<li><a href="shop.html">Company</a></li>
 								<li><a href="contact.html">Contact</a></li>						
 								<div class="clear"></div>
