--- a/web/index.html
+++ b/web/index.html
@@ -79,8 +79,8 @@
 	    	    		<div class="menu">
 	    	    			
   							<ul class="nava small" id="nava" >
-    							<li ><a href="#">BMX MODERFOCKER<img src="images/bmx.png"></a></li>
-    							<li ><a href="#">BMX MODERFOCKER<img src="images/bmx.png"></a></li>
+    							<li ><a href="#">BMX MODERFOCKER<img src="images/sports_bmx.png"></a></li>
+    							<li ><a href="#">BMX MODERFOCKER<img src="images/sports_bmx.png"></a></li>
   							</ul>
   							<script type="text/javascript" src="js/myjs2.js"></script>
   						</div>
