--- a/web/index.html
+++ b/web/index.html
@@ -79,8 +79,16 @@
 	    	    		<div class="menu">
 	    	    			
   							<ul class="nava small" id="nava" >
-    							<li ><a href="#">BMX MODERFOCKER<img src="images/sports_bmx.png"></a></li>
-    							<li ><a href="#">BMX MODERFOCKER<img src="images/sports_bmx.png"></a></li>
+    							<li ><a href="#">СНОУБОРД<img src="images/sports_snowboard.png"></a></li>
+    							<li ><a href="#">РИПСТИК<img src="images/sports_ripstick.png"></a></li>
+    							<li ><a href="#">ПАРАПЛАНЕРИЗЪМ<img src="images/sports_.png"></a></li>
+    							<li ><a href="#">БЪНДЖИ СКОКОВЕ<img src="images/sports_jump.png"></a></li>
+    							<li ><a href="#">ПЛАНИНСКО КОЛОЕЗДЕНЕ<img src="images/sports_bmx.png"></a></li>
+    							<li ><a href="#">РАФТИНГ<img src="images/sports_rafting.png"></a></li>
+    							<li ><a href="#">БЕЙСДЖЪМПИНГ<img src="images/sports_base.png"></a></li>
+    							<li ><a href="#">КАЙТСЪРФИНГ<img src="images/sports_kiting.png"></a></li>
+    							<li ><a href="#">СПОРТНО КАТЕРЕНЕ<img src="images/sports_outdoor.png"></a></li>
+    							<li ><a href="#">ПАРАШУТИЗЪМ<img src="images/sports_parachute.png"></a></li>
   							</ul>
   							<script type="text/javascript" src="js/myjs2.js"></script>
   						</div>
