--- a/web/index.html
+++ b/web/index.html
@@ -79,7 +79,7 @@
 	    	    		<div class="menu">
 	    	    			
   							<ul class="nava small" id="nava" >
-    							<li ><a href="#">СНОУБОРД<img src="images/sports_snowboard.png"></a></li>
+    							<li ><a href="snowboard.html">СНОУБОРД<img src="images/sports_snowboard.png"></a></li>
     							<li ><a href="#">РИПСТИК<img src="images/sports_ripstick.png"></a></li>
     							<li ><a href="#">ПАРАПЛАНЕРИЗЪМ<img src="images/sports_.png"></a></li>
     							<li ><a href="#">БЪНДЖИ СКОКОВЕ<img src="images/sports_jump.png"></a></li>
