--- a/web/register.html
+++ b/web/register.html
@@ -53,16 +53,34 @@
 					 <div class="menu">
 						  <a class="toggleMenu" href="#"><img src="images/nav.png" alt="" /></a>
 						    <ul class="nav" id="nav">
-						    	<li><a href="shop.html">Shop</a></li>
-						    	<li><a href="team.html">Team</a></li>
-						    	<li><a href="shop.html">Events</a></li>
-						    	<li><a href="experiance.html">Experiance</a></li>
-						    	<li><a href="shop.html">Company</a></li>
-								<li><a href="contact.html">Contact</a></li>								
+						    	<li><a href="#" class="toggleMenuz">Спортове</a></li>
+						    	<li><a href="team.html">Екипи</a></li>
+						    	<li><a href="events.html">Събития</a></li>
+						    	<li><a href="extreme.html">Extreme</a></li>
+						    	<li><a href="shop.html">Места</a></li>
+								<li><a href="contact.html">Контакт</a></li>						
 								<div class="clear"></div>
 							</ul>
 							<script type="text/javascript" src="js/responsive-nav.js"></script>
-				    </div>							
+				    </div>
+				    <div class="row"> 
+	    	    		<div class="menu">
+	    	    			
+  							<ul class="nava small" id="nava" >
+    							<li ><a href="snowboard.html">СНОУБОРД<img src="images/sports_snowboard.png"></a></li>
+    							<li ><a href="#">РИПСТИК<img src="images/sports_ripstick.png"></a></li>
+    							<li ><a href="#">ПАРАПЛАНЕРИЗЪМ<img src="images/sports_.png"></a></li>
+    							<li ><a href="#">БЪНДЖИ СКОКОВЕ<img src="images/sports_jump.png"></a></li>
+    							<li ><a href="#">ПЛАНИНСКО КОЛОЕЗДЕНЕ<img src="images/sports_bmx.png"></a></li>
+    							<li ><a href="#">РАФТИНГ<img src="images/sports_rafting.png"></a></li>
+    							<li ><a href="#">БЕЙСДЖЪМПИНГ<img src="images/sports_base.png"></a></li>
+    							<li ><a href="#">КАЙТСЪРФИНГ<img src="images/sports_kiting.png"></a></li>
+    							<li ><a href="#">СПОРТНО КАТЕРЕНЕ<img src="images/sports_outdoor.png"></a></li>
+    							<li ><a href="#">ПАРАШУТИЗЪМ<img src="images/sports_parachute.png"></a></li>
+  							</ul>
+  							<script type="text/javascript" src="js/myjs2.js"></script>
+  						</div>
+					</div>							
 	    		    <div class="clear"></div>
 	    	    </div>
 	            <div class="header_right">
