--- a/web/snowboard.html
+++ b/web/snowboard.html
@@ -73,12 +73,12 @@
 					 <div class="menu">
 						  <a class="toggleMenu" href="#"><img src="images/nav.png" alt="" /></a>
 						    <ul class="nav" id="nav">
-						    	<li><a href="#" class="toggleMenuz">Sports</a></li>
-						    	<li><a href="team.html">Teams</a></li>
-						    	<li><a href="events.html">Events</a></li>
+						    	<li><a href="#" class="toggleMenuz">Спортове</a></li>
+						    	<li><a href="team.html">Екипи</a></li>
+						    	<li><a href="events.html">Събития</a></li>
 						    	<li><a href="extreme.html">Extreme</a></li>
-						    	<li><a href="shop.html">Company</a></li>
-								<li><a href="contact.html">Contact</a></li>						
+						    	<li><a href="shop.html">Места</a></li>
+								<li><a href="contact.html">Контакт</a></li>						
 								<div class="clear"></div>
 							</ul>
 							<script type="text/javascript" src="js/responsive-nav.js"></script>
