--- a/web/login.html
+++ b/web/login.html
@@ -10,6 +10,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <title>Free Snow Bootstrap Website Template | Checkout :: w3layouts</title>
 <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
 <link href="css/style.css" rel='stylesheet' type='text/css' />
+<link href="css/stuffs.css" rel='stylesheet' type='text/css' />
+
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
