--- a/web/single.html
+++ b/web/single.html
@@ -90,24 +90,24 @@
 							</ul>
 							<script type="text/javascript" src="js/responsive-nav.js"></script>
 				    </div>
-				    <div class="row"> 
+				     <div class="row"> 
 	    	    		<div class="menu">
 	    	    			
   							<ul class="nava small" id="nava" >
     							<li ><a href="snowboard.html">СНОУБОРД<img src="images/sports_snowboard.png"></a></li>
-    							<li ><a href="#">РИПСТИК<img src="images/sports_ripstick.png"></a></li>
-    							<li ><a href="#">ПАРАПЛАНЕРИЗЪМ<img src="images/sports_.png"></a></li>
-    							<li ><a href="#">БЪНДЖИ СКОКОВЕ<img src="images/sports_jump.png"></a></li>
-    							<li ><a href="#">ПЛАНИНСКО КОЛОЕЗДЕНЕ<img src="images/sports_bmx.png"></a></li>
-    							<li ><a href="#">РАФТИНГ<img src="images/sports_rafting.png"></a></li>
-    							<li ><a href="#">БЕЙСДЖЪМПИНГ<img src="images/sports_base.png"></a></li>
-    							<li ><a href="#">КАЙТСЪРФИНГ<img src="images/sports_kiting.png"></a></li>
-    							<li ><a href="#">СПОРТНО КАТЕРЕНЕ<img src="images/sports_outdoor.png"></a></li>
-    							<li ><a href="#">ПАРАШУТИЗЪМ<img src="images/sports_parachute.png"></a></li>
+    							<li ><a href="ripstick.html">РИПСТИК<img src="images/sports_ripstick.png"></a></li>
+    							<li ><a href="paraplanerism.html">ПАРАПЛАНЕРИЗЪМ<img src="images/sports_.png"></a></li>
+    							<li ><a href="jump.html">БЪНДЖИ СКОКОВЕ<img src="images/sports_jump.png"></a></li>
+    							<li ><a href="bmx.html">ПЛАНИНСКО КОЛОЕЗДЕНЕ<img src="images/sports_bmx.png"></a></li>
+    							<li ><a href="rafting.html">РАФТИНГ<img src="images/sports_rafting.png"></a></li>
+    							<li ><a href="base.html">БЕЙСДЖЪМПИНГ<img src="images/sports_base.png"></a></li>
+    							<li ><a href="kiting.html">КАЙТСЪРФИНГ<img src="images/sports_kiting.png"></a></li>
+    							<li ><a href="outdoor.html">СПОРТНО КАТЕРЕНЕ<img src="images/sports_outdoor.png"></a></li>
+    							<li ><a href="parachute.html">ПАРАШУТИЗЪМ<img src="images/sports_parachute.png"></a></li>
   							</ul>
   							<script type="text/javascript" src="js/myjs2.js"></script>
   						</div>
-					</div>							
+					</div>				
 	    		    <div class="clear"></div>
 	    	    </div>
 	            <div class="header_right">
