--- a/web/kiting.html
+++ b/web/kiting.html
@@ -154,17 +154,17 @@
 				<div class="col-md-3 team1 shit" style="width: 40%;">
 				  
 				   
-					<h3 class="m_2">БЕЙСДЖЪМПИНГ</h3>
-				    <p class="m_6">БЕЙС ДЖЪМПИНГ представляват скокове с парашут от земна цел, и от там самото наименование. Името му произлиза от английската абревиaтура B.A.S.E. – Building (сгради),Antenna (кули и други подобни съоръжения), Span (обособено кратко разстояние, примерно мост) и earth (земя, скали). 
-Бейс джъмпингът се определя като един от най-екстремните и опасни за практикуване спортове. Първият бейсджъмпинг в България се провежда от Росен Касабов (клуб Адреналин), който през 1992г. го изпълнява от "Аспарухов-мост" - Варна. Може би най-известният бейсджъмпър в момента е момчето, което покори стратосферата – Феликс Баумгартнер. </p>
-					<a  href="#small-dialog3"><img src="images/base.jpg" class="img-responsive" title="continue" alt=""/></a>
+					<h3 class="m_2">КАЙТ СЪРФИНГ</h3>
+				    <p class="m_6">Спортното катерене е разклонение от катеренето, където елементът на опасност е сведен до минимум от поставените по скалата осигурителни точки. Тези точки известни сред катерачните среди като "болтове" биват два вида и се поставят в предварително пробити в скалата дупки. При единият вид за закрепването се използва специално лепило, а при другият вид болтът има свойството да се разширява отвътре и така да създава определно съпротивление върху скалата. 
+Тъй като при това катерене опасността е сведена до минимум, физическата трудност може да бъде екстремно висока, много по-висока от колкото е приемливо при катеренето в традиционен стил. Паданията са относително безопасни и се приемат като нещо напълно нормално, което е неразделна част от изкачването. </p>
+					<a  href="#small-dialog3"><img src="images/kiting.jpg" class="img-responsive" title="continue" alt=""/></a>
 				</div>
 				<div class="col-md-3 team1">
 				<div class="col-md-8">
 					<ul class="team_list">
 					 <h4>Видео</h4>
 		             <iframe width="700" height="500"
-src="https://www.youtube.com/embed/I4U6T_BB1N8">
+src="https://www.youtube.com/embed/i8T6OjFP0fw">
 </iframe>
 		          </ul>
 				</div>
