--- a/web/rafting.html
+++ b/web/rafting.html
@@ -154,18 +154,16 @@
 				<div class="col-md-3 team1 shit" style="width: 40%;">
 				  
 				   
-					<h3 class="m_2">SNOWBOARD</h3>
-				    <p class="m_6">Сноуборд (на английски snowboard, в буквален превод снежна дъска) представлява плоска конструкция, предназначена за спускане по снежни наклони в планината. Разглежда се като зимния еквивалент на скейтборда. 
-Сноубордът има дървена основа, а отгоре и отдолу слоеве от стъклопласт. Върху дъската има закрепвания за краката. Дължината му варира от 140 до 165 см, а ширината му от 24 до 27 см.
-В сноуборда има няколко стила - свободно каране, фриистайл, бордъркрос и спускания в "алпийски стил" (които стават пред много публика и имат оценяване от жури).</p>
-					<a  href="#small-dialog3"><img src="images/team5.jpg" class="img-responsive" title="continue" alt=""/></a>
+					<h3 class="m_2">РАФТИНГ</h3>
+				    <p class="m_6">Думата рафтинг произлиза от английската дума raft /сал/. Рафтингът е екстремен спорт, който всъщност представлява спускане с гумени лодки /рафтове/ по речни бързеи. Най-добрият сезон за рафтинг е пролетта, когато реките прииждат от снеготопенето и са най-пълноводни и буйни.</p>
+					<a  href="#small-dialog3"><img src="images/rafting.jpg" class="img-responsive" title="continue" alt=""/></a>
 				</div>
 				<div class="col-md-3 team1">
 				<div class="col-md-8">
 					<ul class="team_list">
 					 <h4>Видео</h4>
 		             <iframe width="700" height="500"
-src="https://www.youtube.com/embed/V9xuy-rVj9w">
+src="https://www.youtube.com/embed/lIHO7Fou76A">
 </iframe>
 		          </ul>
 				</div>
