--- a/web/snowboard - Copy (3).html
+++ b/web/snowboard - Copy (3).html
@@ -154,17 +154,18 @@
 				<div class="col-md-3 team1 shit" style="width: 40%;">
 				  
 				   
-					<h3 class="m_2">БЕЙСДЖЪМПИНГ</h3>
-				    <p class="m_6">БЕЙС ДЖЪМПИНГ представляват скокове с парашут от земна цел, и от там самото наименование. Името му произлиза от английската абревиaтура B.A.S.E. – Building (сгради),Antenna (кули и други подобни съоръжения), Span (обособено кратко разстояние, примерно мост) и earth (земя, скали). 
-Бейс джъмпингът се определя като един от най-екстремните и опасни за практикуване спортове. Първият бейсджъмпинг в България се провежда от Росен Касабов (клуб Адреналин), който през 1992г. го изпълнява от "Аспарухов-мост" - Варна. Може би най-известният бейсджъмпър в момента е момчето, което покори стратосферата – Феликс Баумгартнер. </p>
-					<a  href="#small-dialog3"><img src="images/base.jpg" class="img-responsive" title="continue" alt=""/></a>
+					<h3 class="m_2">SNOWBOARD</h3>
+				    <p class="m_6">Сноуборд (на английски snowboard, в буквален превод снежна дъска) представлява плоска конструкция, предназначена за спускане по снежни наклони в планината. Разглежда се като зимния еквивалент на скейтборда. 
+Сноубордът има дървена основа, а отгоре и отдолу слоеве от стъклопласт. Върху дъската има закрепвания за краката. Дължината му варира от 140 до 165 см, а ширината му от 24 до 27 см.
+В сноуборда има няколко стила - свободно каране, фриистайл, бордъркрос и спускания в "алпийски стил" (които стават пред много публика и имат оценяване от жури).</p>
+					<a  href="#small-dialog3"><img src="images/team5.jpg" class="img-responsive" title="continue" alt=""/></a>
 				</div>
 				<div class="col-md-3 team1">
 				<div class="col-md-8">
 					<ul class="team_list">
 					 <h4>Видео</h4>
 		             <iframe width="700" height="500"
-src="https://www.youtube.com/embed/I4U6T_BB1N8">
+src="https://www.youtube.com/embed/V9xuy-rVj9w">
 </iframe>
 		          </ul>
 				</div>
