--- a/web/parachute.html
+++ b/web/parachute.html
@@ -154,7 +154,7 @@
 				<div class="col-md-3 team1 shit" style="width: 40%;">
 				  
 				   
-					<h3 class="m_2">ПАРАЩУТИЗЪМ</h3>
+					<h3 class="m_2">ПАРАШУТИЗЪМ</h3>
 				    <p class="m_6">Парашутизмът, или скачане с парашут, е действието на излизане от самолет и връщането на земята с помощта на гравитация и парашут, който забавя скоростта на спускане в заключителната част.
 Може да включва определено време на свободно падане, през което парашутът не е разгърнат и падането на тялото постепенно се ускорява до скоростта на свободно падане.</p>
 					<a  href="#small-dialog3"><img src="images/parachute.jpg" class="img-responsive" title="continue" alt=""/></a>
