--- a/web/snowboard.html
+++ b/web/snowboard.html
@@ -154,7 +154,7 @@
 				<div class="col-md-3 team1 shit" style="width: 40%;">
 				  
 				   
-					<h3 class="m_2">SNOWBOARD</h3>
+					<h3 class="m_2">СНОУБОРД</h3>
 				    <p class="m_6">Сноуборд (на английски snowboard, в буквален превод снежна дъска) представлява плоска конструкция, предназначена за спускане по снежни наклони в планината. Разглежда се като зимния еквивалент на скейтборда. 
 Сноубордът има дървена основа, а отгоре и отдолу слоеве от стъклопласт. Върху дъската има закрепвания за краката. Дължината му варира от 140 до 165 см, а ширината му от 24 до 27 см.
 В сноуборда има няколко стила - свободно каране, фриистайл, бордъркрос и спускания в "алпийски стил" (които стават пред много публика и имат оценяване от жури).</p>
