--- a/web/index.html
+++ b/web/index.html
@@ -172,7 +172,7 @@
             <!--/slide -->
             <!-- /Duplicate to create more slides -->
             <div class="slide">
-               <img src="images/slider2.jpg" class="img-responsive" alt=""/>
+               <img src="images/slider3.jpg" class="img-responsive" alt=""/>
                 <div class="slide_content">
                     <div class="slide_content_wrap">
                         <h1 class="title">Run Over<br>Everything</h1>
@@ -181,6 +181,34 @@
                 </div>
             </div>
             <!--/slide -->
+            <div class="slide">
+               <img src="images/slider4.jpg" class="img-responsive" alt=""/>
+                <div class="slide_content">
+                    <div class="slide_content_wrap">
+                        <h1 class="title">Run Over<br>Everything</h1>
+                       	<div class="button"><a href="#">See Details</a></div>
+                    </div>
+                </div>
+            </div>
+            <div class="slide">
+               <img src="images/slider5.jpg" class="img-responsive" alt=""/>
+                <div class="slide_content">
+                    <div class="slide_content_wrap">
+                        <h1 class="title">Run Over<br>Everything</h1>
+                       	<div class="button"><a href="#">See Details</a></div>
+                    </div>
+                </div>
+            </div>
+            <div class="slide">
+               <img src="images/slider6.jpg" class="img-responsive" alt=""/>
+                <div class="slide_content">
+                    <div class="slide_content_wrap">
+                        <h1 class="title">Run Over<br>Everything</h1>
+                       	<div class="button"><a href="#">See Details</a></div>
+                    </div>
+                </div>
+            </div>
+
         </div>
         <div class="timers"></div>
         <div class="slidePrev"><span></span></div>
