--- a/web/index.html
+++ b/web/index.html
@@ -172,7 +172,7 @@
             <!--/slide -->
             <!-- /Duplicate to create more slides -->
             <div class="slide">
-               <img src="images/slider3.jpg" class="img-responsive" alt=""/>
+               <img src="images/slide3.jpg" class="img-responsive" alt=""/>
                 <div class="slide_content">
                     <div class="slide_content_wrap">
                         <h1 class="title">Run Over<br>Everything</h1>
@@ -182,7 +182,7 @@
             </div>
             <!--/slide -->
             <div class="slide">
-               <img src="images/slider4.jpg" class="img-responsive" alt=""/>
+               <img src="images/slidе4.jpg" class="img-responsive" alt=""/>
                 <div class="slide_content">
                     <div class="slide_content_wrap">
                         <h1 class="title">Run Over<br>Everything</h1>
@@ -191,7 +191,7 @@
                 </div>
             </div>
             <div class="slide">
-               <img src="images/slider5.jpg" class="img-responsive" alt=""/>
+               <img src="images/slide5.jpg" class="img-responsive" alt=""/>
                 <div class="slide_content">
                     <div class="slide_content_wrap">
                         <h1 class="title">Run Over<br>Everything</h1>
@@ -200,7 +200,7 @@
                 </div>
             </div>
             <div class="slide">
-               <img src="images/slider6.jpg" class="img-responsive" alt=""/>
+               <img src="images/slide6.jpg" class="img-responsive" alt=""/>
                 <div class="slide_content">
                     <div class="slide_content_wrap">
                         <h1 class="title">Run Over<br>Everything</h1>
