--- a/web/index.html
+++ b/web/index.html
@@ -182,7 +182,7 @@
             </div>
             <!--/slide -->
             <div class="slide">
-               <img src="images/slidе4.jpg" class="img-responsive" alt=""/>
+               <img src="images/slide4.jpg" class="img-responsive" alt=""/>
                 <div class="slide_content">
                     <div class="slide_content_wrap">
                         <h1 class="title">Run Over<br>Everything</h1>
@@ -217,47 +217,7 @@
        <!--/slider -->
       </div>
 	  <div class="main">
-		<div class="content-top">
-			<h2>snowboards</h2>
-			<p>hendrerit in vulputate velit esse molestie consequat, vel illum dolore</p>
-			<div class="close_but"><i class="close1"> </i></div>
-				<ul id="flexiselDemo3">
-				<li><img src="images/board1.jpg" /></li>
-				<li><img src="images/board2.jpg" /></li>
-				<li><img src="images/board3.jpg" /></li>
-				<li><img src="images/board4.jpg" /></li>
-				<li><img src="images/board5.jpg" /></li>
-			</ul>
-		<h3>SnowBoard Extreme Series</h3>
-			<script type="text/javascript">
-		$(window).load(function() {
-			$("#flexiselDemo3").flexisel({
-				visibleItems: 5,
-				animationSpeed: 1000,
-				autoPlay: true,
-				autoPlaySpeed: 3000,    		
-				pauseOnHover: true,
-				enableResponsiveBreakpoints: true,
-		    	responsiveBreakpoints: { 
-		    		portrait: { 
-		    			changePoint:480,
-		    			visibleItems: 1
-		    		}, 
-		    		landscape: { 
-		    			changePoint:640,
-		    			visibleItems: 2
-		    		},
-		    		tablet: { 
-		    			changePoint:768,
-		    			visibleItems: 3
-		    		}
-		    	}
-		    });
-		    
-		});
-		</script>
-		<script type="text/javascript" src="js/jquery.flexisel.js"></script>
-		</div>
+		
 	</div>
 	<div class="content-bottom">
 		<div class="container">
@@ -281,7 +241,7 @@
                     <div class="mask mask-1"> </div>
                     <div class="mask mask-2"> </div>
                       <div class="content">
-                        <h2>Hover Style #9</h2>
+                        <h2>Ripstick</h2>
                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing.</p>
                       </div>
                    </a> </div
@@ -337,9 +297,8 @@
 					<div class="col-md-3">
 						<ul class="footer_box">
 							<h4>Products</h4>
-							<li><a href="#">Mens</a></li>
-							<li><a href="#">Womens</a></li>
-							<li><a href="#">Youth</a></li>
+							<li><a href="#">Snowboard</a></li>
+							<li><a href="#">Ripstick</a></li>
 						</ul>
 					</div>
 					<div class="col-md-3">
@@ -383,7 +342,7 @@
 				</div>
 				<div class="row footer_bottom">
 				    <div class="copy">
-			           <p>© 2014 Template by <a href="http://w3layouts.com" target="_blank">w3layouts</a></p>
+			          
 		            </div>
 					  <dl id="sample" class="dropdown">
 				        <dt><a href="#"><span>Change Region</span></a></dt>
