--- a/web/index.html
+++ b/web/index.html
@@ -288,8 +288,8 @@
                    <p class="m_5">claritatem insitam</p>
 				</div>
 				<div class="col-md-3 top_box1">
-					<div class="view view-ninth">
-                    <a  href=""><img src="images/rafting.jpg" class="img-responsive" title="continue" alt=""/>
+					<div class="view view-ninth"><a href="single.html">
+                    <img src="images/pic4.jpg" class="img-responsive" alt=""/>
                     <div class="mask mask-1"> </div>
                     <div class="mask mask-2"> </div>
                       <div class="content">
