--- a/web/checkout.html
+++ b/web/checkout.html
@@ -141,10 +141,17 @@
 				<div class="row">
 					<div class="col-md-3">
 						<ul class="footer_box">
-							<h4>Products</h4>
-							<li><a href="#">Mens</a></li>
-							<li><a href="#">Womens</a></li>
-							<li><a href="#">Youth</a></li>
+							<h4>Sports</h4>
+							<li><a href="#">Snowboard</a></li>
+							<li><a href="#">Ripstick</a></li>
+							<li><a href="#">Paraplanerism</a></li>
+							<li><a href="#">Jumping      </a></li>
+							<li><a href="#">Mountain bike</a></li>
+							<li><a href="#">Rafting      </a></li>
+							<li><a href="#">Base jumping </a></li>
+							<li><a href="#">Kiting       </a></li>
+							<li><a href="#">Climbing     </a></li>
+							<li><a href="#">Parachutism  </a></li>
 						</ul>
 					</div>
 					<div class="col-md-3">
