--- a/web/index.html
+++ b/web/index.html
@@ -152,7 +152,7 @@
                 <div class="slide_content">
                     <div class="slide_content_wrap">
                         <!-- Text title -->
-                        <h1 class="title">Run Over<br>Everything</h1>
+                        <h1 class="title">Extreme<br>To the edge</h1>
                         <!-- /Text title -->
                         <div class="button"><a href="#">See Details</a></div>
                     </div>
@@ -164,7 +164,7 @@
                <img src="images/slider2.jpg" class="img-responsive" alt=""/>
                 <div class="slide_content">
                     <div class="slide_content_wrap">
-                        <h1 class="title">Run Over<br>Everything</h1>
+                        <h1 class="title">Extreme<br>To the edge</h1>
                        	<div class="button"><a href="#">See Details</a></div>
                     </div>
                 </div>
@@ -175,7 +175,7 @@
                <img src="images/slide3.jpg" class="img-responsive" alt=""/>
                 <div class="slide_content">
                     <div class="slide_content_wrap">
-                        <h1 class="title">Run Over<br>Everything</h1>
+                        <h1 class="title">Extreme<br>To the edge</h1>
                        	<div class="button"><a href="#">See Details</a></div>
                     </div>
                 </div>
@@ -185,7 +185,7 @@
                <img src="images/slide4.jpg" class="img-responsive" alt=""/>
                 <div class="slide_content">
                     <div class="slide_content_wrap">
-                        <h1 class="title">Run Over<br>Everything</h1>
+                        <h1 class="title">Extreme<br>To the edge</h1>
                        	<div class="button"><a href="#">See Details</a></div>
                     </div>
                 </div>
@@ -194,7 +194,7 @@
                <img src="images/slide5.jpg" class="img-responsive" alt=""/>
                 <div class="slide_content">
                     <div class="slide_content_wrap">
-                        <h1 class="title">Run Over<br>Everything</h1>
+                        <h1 class="title">Extreme<br>To the edge</h1>
                        	<div class="button"><a href="#">See Details</a></div>
                     </div>
                 </div>
@@ -203,7 +203,7 @@
                <img src="images/slide6.jpg" class="img-responsive" alt=""/>
                 <div class="slide_content">
                     <div class="slide_content_wrap">
-                        <h1 class="title">Run Over<br>Everything</h1>
+                        <h1 class="title">Extreme<br>To the edge</h1>
                        	<div class="button"><a href="#">See Details</a></div>
                     </div>
                 </div>
@@ -223,16 +223,16 @@
 		<div class="container">
 			<div class="row content_bottom-text">
 			  <div class="col-md-7">
-				<h3>The Mountains<br>Snowboarding</h3>
-				<p class="m_1">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio.</p>
-				<p class="m_2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio.</p>
-			  </div>
+				<h3>Сноуборд<br>в планината</h3>
+				<p class="m_1">Сноуборд (на английски snowboard, в буквален превод снежна дъска) представлява плоска конструкция, предназначена за спускане по снежни наклони в планината. Разглежда се като зимния еквивалент на скейтборда. Сноубордът има дървена основа, а отгоре и отдолу слоеве от стъклопласт. Върху дъската има закрепвания за краката. Дължината му варира от 140 до 165 см, а ширината му от 24 до 27 см.</p>
+				<p class="m_2">В сноуборда има няколко стила - свободно каране, фриистайл, бордъркрос и спускания в "алпийски стил" (които стават пред много публика и имат оценяване от жури).</p>
+				</div>
 			</div>
 		</div>
 	</div>
 	<div class="features">
 		<div class="container">
-			<h3 class="m_3">Features</h3>
+			<h3 class="m_3">Спортове</h3>
 			<div class="close_but"><i class="close1"> </i></div>
 			  <div class="row">
 				<div class="col-md-3 top_box">
@@ -241,13 +241,13 @@
                     <div class="mask mask-1"> </div>
                     <div class="mask mask-2"> </div>
                       <div class="content">
-                        <h2>Ripstick</h2>
+                        <h2>Рипстик</h2>
                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing.</p>
                       </div>
                    </a> </div
                   </div>
-                  <h4 class="m_4"><a href="#">nostrud exerci ullamcorper</a></h4>
-                  <p class="m_5">claritatem insitam</p>
+                  <h4 class="m_4"><a href="#">Рипстик</a></h4>
+                  <p class="m_5"></p>
                 </div>
                 <div class="col-md-3 top_box">
 					<div class="view view-ninth"><a href="single.html">
@@ -255,12 +255,12 @@
                     <div class="mask mask-1"> </div>
                     <div class="mask mask-2"> </div>
                       <div class="content">
-                        <h2>Hover Style #9</h2>
+                        <h2>Кайт сърфинг</h2>
                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing.</p>
                       </div>
                     </a> </div>
-                   <h4 class="m_4"><a href="#">nostrud exerci ullamcorper</a></h4>
-                   <p class="m_5">claritatem insitam</p>
+                   <h4 class="m_4"><a href="#">Кайт сърфинг</a></h4>
+                   <p class="m_5"></p>
 				</div>
 				<div class="col-md-3 top_box">
 					<div class="view view-ninth"><a href="single.html">
@@ -268,12 +268,12 @@
                     <div class="mask mask-1"> </div>
                     <div class="mask mask-2"> </div>
                       <div class="content">
-                        <h2>Hover Style #9</h2>
+                        <h2>Парапланеризъм</h2>
                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing.</p>
                       </div>
                     </a> </div>
-                   <h4 class="m_4"><a href="#">nostrud exerci ullamcorper</a></h4>
-                   <p class="m_5">claritatem insitam</p>
+                   <h4 class="m_4"><a href="#">Парапланеризъм</a></h4>
+                   <p class="m_5"></p>
 				</div>
 				<div class="col-md-3 top_box1">
 					<div class="view view-ninth"><a href="single.html">
@@ -281,12 +281,12 @@
                     <div class="mask mask-1"> </div>
                     <div class="mask mask-2"> </div>
                       <div class="content">
-                        <h2>Hover Style #9</h2>
+                        <h2>Сноуборд</h2>
                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing.</p>
                       </div>
                      </a> </div>
-                   <h4 class="m_4"><a href="#">nostrud exerci ullamcorper</a></h4>
-                   <p class="m_5">claritatem insitam</p>
+                   <h4 class="m_4"><a href="#">Сноуборд</a></h4>
+                   <p class="m_5"></p>
 				</div>
 			</div>
 		 </div>
@@ -296,9 +296,17 @@
 				<div class="row">
 					<div class="col-md-3">
 						<ul class="footer_box">
-							<h4>Products</h4>
+							<h4>Sports</h4>
 							<li><a href="#">Snowboard</a></li>
 							<li><a href="#">Ripstick</a></li>
+							<li><a href="#">Paraplanerism</a></li>
+							<li><a href="#">Jumping      </a></li>
+							<li><a href="#">Mountain bike</a></li>
+							<li><a href="#">Rafting      </a></li>
+							<li><a href="#">Base jumping </a></li>
+							<li><a href="#">Kiting       </a></li>
+							<li><a href="#">Climbing     </a></li>
+							<li><a href="#">Parachutism  </a></li>
 						</ul>
 					</div>
 					<div class="col-md-3">
